--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,9 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
     compile "com.google.inject:guice:$guice_version"
     compile "com.google.inject.extensions:guice-servlet:$guice_version"
+    compile "ch.qos.logback:logback-core:$logback_version"
 
-    runtime "ch.qos.logback:logback-core:$logback_version"
+    runtime "ch.qos.logback:logback-classic:$logback_version"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_version"
     testImplementation "org.mockito:mockito-core:$mockito_version"
